set up react development environment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,38 @@
-@font-face {
-    font-family: "Cubano";
-    src: url("./fonts/Cubano.eot"); /* IE9*/
-    src: url("./fonts/Cubano.eot.iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./fonts/Cubano.woff2") format("woff2"), /* chrome firefox */
-    url("./fonts/Cubano.woff") format("woff"), /* chrome firefox */
-    url("./fonts/Cubano.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
-    url("./fonts/Cubano.svg") format("svg"); /* iOS 4.1- */
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
