--- a/frontend/src/assets/custom.css
+++ b/frontend/src/assets/custom.css
@@ -14,5 +14,25 @@ a {
 }
 
 .content {
-    min-height: 75vh;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	padding-bottom: 90px;
+	box-sizing: border-box;
+}
+
+body, html {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+  }
+  
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: auto;
+  background-color: white;
 }
